@@ -1,4 +1,9 @@
-2006-04-08  Dai Sato  <satodai@w3m.jp>
+2006-05-29  Dai Sato  <satodai@w3m.jp>
+
+	* [w3m-dev-en 01067] Some more patches
+	* main.c: fix unsafe usages of SIGWINCH handler.
+
+2006-05-29  Dai Sato  <satodai@w3m.jp>
 
 	* [w3m-dev-en 01067] Some more patches
 	* keybind(_lynx).c, doc(-jp)/keymap.default: add SHIFT-TAB as a default binding for PREV_LINK.
@@ -8713,4 +8718,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.961 2006/05/29 12:17:24 inu Exp $
+$Id: ChangeLog,v 1.962 2006/05/29 12:28:01 inu Exp $
